--- a/Data engineer/part-2/Databricks_session-1 (1).ipynb
+++ b/Data engineer/part-2/Databricks_session-1 (1).ipynb
@@ -49,6 +49,9 @@
      "nuid": "8033d1eb-2190-4b91-a4fd-4ba788dfd1de",
      "showTitle": false,
      "title": ""
+    },
+    "jupyter": {
+     "outputs_hidden": true
     }
    },
    "outputs": [
@@ -7440,6 +7443,9 @@
      "nuid": "68cca78f-8b45-4096-adf5-1327582267a7",
      "showTitle": false,
      "title": ""
+    },
+    "jupyter": {
+     "outputs_hidden": true
     }
    },
    "outputs": [
